# bencode

./: Cargo.toml  README.md
resource/: integer_example.bencode
src/: main.rs
src/parser/: bencode.rs  handshake.rs  mod.rs  peers.rs  torrent_file.rs
src/request/: client.rs  handshake.rs  message.rs  mod.rs  peer_stream.rs  torrent_message.rs
src/traits/: from_bencode.rs  mod.rs
