[package]
name = "TTorrent"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"
reqwest = { version = "0.12", features = ["blocking"] }
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.7"
percent-encoding = "2.3.2"
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0.17"
async-channel = "2.5.0"

