[package]
name = "TTorrent"
version = "0.1.0"
authors = ["Teo Spadotto <teospadotto@gmail.com>"]
description = "my client for downloading torrent file"
edition = "2024"


[dependencies]
regex = "1.12.2"
reqwest = { version = "0.12", features = ["blocking"] }
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
url = "2.5.7"
percent-encoding = "2.3.2"
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0.17"
async-channel = "2.5.0"
log = "0.4"
env_logger = "0.11"
serde = "1.0.228"
serde_bencode = "0.2.4"
serde_bytes = "0.11.19"

